--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>NID Dfrost | March 18-19, 2017</title>
-	<meta name="description" content="NID , Bengaluru , Event , Design , Fest , Dfrost ,">  
-	<meta name="author" content="">
+	<!-- <meta name="description" content="NID , Bengaluru , Event , Design , Fest , Dfrost ,">  
+	<meta name="author" content=""> -->
+	<meta property="og:title" content="NID Dfrost | 18-19 March 2017" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://www.dfrostnid.com" />
+	<meta property="og:image" content="img/fb_image.jpg" />
+	<meta property="og:description" content="The annual Design & Cultural festival of NID Bangalore. Our theme for 2017, 'Beyond The Event Horizon', is a celebration of all that is not commonplace and is extraordinary. It is a space for ideas that exist outside of the mundane. Grab your passes now! " />
 	<link rel="icon" type="image/ico" href="img/favicon_dfrost.png">
 	<!-- Bootstrap and MDB import -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
-	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">  -->
+	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">-->
 	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet"> -->
 	<!-- <link href="css/rippler.min.css" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,900" rel="stylesheet"> 
@@ -110,6 +115,7 @@
 		<section id="home" class="home home-particles">
 			
 			<div class="dfrost-logo"></div>
+			<div><img class="sponsor2" src="img/sp-hp.png"></div>
 			<div class="options">
 				<div class="register_btn">
 				<a href="https://in.explara.com/widget-new/dfrost-2017" target="_blank">REGISTER NOW</a></div>		
@@ -523,11 +529,13 @@
 		   		<div class="partner_cnt">
 		   			<h2>PARTNERS</h2>
 		   			<div class="partner_pics">
+		   				<a href="http://www.hindustanpetroleum.com" target="_blank"><img src="img/sp-hp.jpg"></a>
 		   				<a href="http://www.wacom.com/en-in" target="_blank"><img src="img/sp-wacom.png"></a>
 		   				<a href="http://www.thyrocare.com" target="_blank"><img src="img/sp-thyrocare.png"></a>
 		   				<a href="https://www.mapbox.com" target="_blank"><img src="img/sp-mapbox.png"></a>
 		   				<a href="http://www.thehindu.com" target="_blank"><img src="img/sp-the-hindu.png"></a>
 		   				<a href="http://www.telangana.gov.in/about/language-culture" target="_blank"><img src="img/sp-Govt-Logo.png"></a>
+
 		   				<!-- <img src="img/sp-thyrocare.png"> -->		   				
 		   			</div>
 		   		</div>
