sponsors updated, files updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:title" content="NID Dfrost | 18-19 March 2017" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://www.dfrostnid.com" />
-	<meta property="og:image" content="https://www.dfrostnid.com/img/fb_image.jpg" />
+	<meta property="og:image" content="https://www.dfrostnid.com/img/fb_image.jpg"/>
 	<meta property="og:description" content="The annual Design & Cultural festival of NID Bangalore. Our theme for 2017, 'Beyond The Event Horizon', is a celebration of all that is not commonplace and is extraordinary. It is a space for ideas that exist outside of the mundane. Grab your passes now! " />
 	<link rel="icon" type="image/ico" href="img/favicon_dfrost.png">
 	<!-- Bootstrap and MDB import -->
@@ -204,7 +204,7 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">02:00 PM - 04:00 PM</span>
-			    				<span class="high lab">Futuristic Map Design</span>
+			    				<span class="high lab" style="vertical-align: top;">Futuristic Map Design (Laptop required)</span>
 			    				<span class="low">Mapbox Team, Bangalore</span>
 		    				</div>
 		    			</div>
@@ -337,6 +337,7 @@
 		   	<section id="speakers" class="speakers">
 		   		<div class="  speaker_cutout" >
 			   		<h2>dTALKS</h2>
+			   		<img id="sp-dtalks" src="img/sp-dtalks.png">
 			   		<img src="img/Final_backgrounds/dTalks-Holder.svg" class="speaker-cutout-img" alt="">
 			   	</div>
 			   	<div class="first_row">
@@ -412,7 +413,7 @@
 		    <section id="workshops" class="dlabs">
 		    	<div class="dlabs_cut_heading">
 		    		<h2>dLABS</h2>
-		    	
+		    		<img id="sp-dlabs" src="img/sp-dlabs.png">
 		    	</div>
 		    	<img class="dlabs_cutout_img" src="img/Final_backgrounds/dLabs-Holder.svg" alt="">
 		    	<div class="dlabs_cnt">
@@ -434,7 +435,7 @@
 		    			<img src="img/Workshop-Mapbox.png" alt="">
 		    			<div class="content">
 			    			<h3>FUTURISTIC MAP DESIGN <span><p>&mdash; Mapbox Team, Bangalore</p></span></h3>
-			    			<p>Learn to create custom map datasets using crowdsourced data and different cartographic styling techniques. A concise and comprehensive look into map building.</p>
+			    			<p>Create a futuristic map style by using custom icons, type &amp; colors in this hands-on workshop on Mapbox Studio</p>
 		    			</div>
 		    		</div>
 		    		<div class="day21 day">
@@ -468,10 +469,11 @@
 		   			<P>Get a chance to showcase your work at a prominent platform.
 		   			Dfrost is hosting online contests for digital painting and photography.</P>
 		   			<p><span class="color">The winning entries will be on display at Dfrost, and the winners will bag goodies worth Rs 10,000.</span></p>
-		   			<p>Contests are open till <span class="color">March 18, 11:00pm.</span> All the best!</p>
+		   			<p>Contests are open till <span class="color">March 19, 11:00pm.</span> All the best!</p>
 		   		</div>
 		   		<div class="com_img">
 		   			<a href="img/BreaktheDimension-DigitalPainting.pdf" target="_blank"><img src="img/Final_backgrounds/images/Digital-Painting.png" class="painting" alt=""></a>
+		   			<div class="download-schdl"><a id="upload" href="http://bit.ly/nidbangalorecompetition" target="_blank">Upload entry</a></div>
 		   			<a href="img/WindowtotheOtherside-Photography.pdf" target="_blank"><img src="img/Final_backgrounds/images/Photography.png" class="photography" alt=""></a>
 		   		</div>
 		   	</section>
@@ -494,6 +496,7 @@
 		    			<img src="img/dgallery.png">
 		    			<div class="content">
 		    				<h3>dGALLERY</h3>
+		    				<img id="sp-dgallery" src="img/sp-dgallery.png">
 		    				<p>A showcase of the things we craft with utmost love at NID Bangalore. Five great exhibits from our five disciplines – Design for Retail Experience, Digital Game Design, Information Design, Interaction Design, Universal Design.</p>
 		    			</div>
 		    		</div>
@@ -528,15 +531,23 @@
 		   	<section id="partners" class="partners">
 		   		<div class="partner_cnt">
 		   			<h2>PARTNERS</h2>
-		   			<div class="partner_pics">
+		   			<div class="sponsors">
+		   			<div class="sp-ass"><h3 id="sp-title">Associate Sponsor</h3>
 		   				<a href="http://www.hindustanpetroleum.com" target="_blank"><img src="img/sp-hp.jpg"></a>
-		   				<a href="http://www.wacom.com/en-in" target="_blank"><img src="img/sp-wacom.png"></a>
-		   				<a href="http://www.thyrocare.com" target="_blank"><img src="img/sp-thyrocare.png"></a>
-		   				<a href="https://www.mapbox.com" target="_blank"><img src="img/sp-mapbox.png"></a>
-		   				<a href="http://www.thehindu.com" target="_blank"><img src="img/sp-the-hindu.png"></a>
+		   			</div>
+		   			<div class="sp-other"><h3 id="sp-title">dGallery Sponsor</h3>	   				
+		   				<a href="http://www.wacom.com/en-in" target="_blank"><img src="img/sp-wacom.png"></a></div>
+		   			<div class="sp-other"><h3 id="sp-title">dTalks Sponsor</h3>	
+		   				<a href="http://www.thyrocare.com" target="_blank"><img src="img/sp-thyrocare.png"></a></div>
+		   			<div class="sp-other"><h3 id="sp-title">dLabs Sponsor</h3>
+		   				<a href="https://www.mapbox.com" target="_blank"><img src="img/sp-mapbox.png"></a></div>
+		   			<div class="sp-other"><h3 id="sp-title">Media Partner</h3>
+		   				<a href="http://www.thehindu.com" target="_blank"><img src="img/sp-the-hindu.png"></a></div>
+		   			<div class="sp-other"><h3 id="sp-title">Event Sponsor</h3>
 		   				<a href="http://www.telangana.gov.in/about/language-culture" target="_blank"><img src="img/sp-Govt-Logo.png"></a>
 
 		   				<!-- <img src="img/sp-thyrocare.png"> -->		   				
+		   			</div>
 		   			</div>
 		   		</div>
 		   	</section>
@@ -556,7 +567,9 @@
 		   				12, HMT Link Road (off Tumkur Road),<br>Opposite Platinum City<br>
 		   				Peenya, Bengaluru - 560022
 					</p><!-- </a> -->
-					<a href="https://goo.gl/maps/yGVoRZFdZQ22" target="_blank"><button class="btn btn-default maps">View on Google Maps</button></a><br><br>
+					<div class="download-schdl"><a href="https://goo.gl/maps/yGVoRZFdZQ22" target="_blank">View on Google Maps</a></div>
+					<!-- <a href="https://goo.gl/maps/yGVoRZFdZQ22" target="_blank"><button class="btn btn-default maps">View on Google Maps</button></a> -->
+					<br><br>
 					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>&nbsp;080-297-25006</p></a>
 					<a href="tel:" target="_blank"><p><i class="fa fa-phone"></i>&nbsp;080-297-23276</p></a>
 					<a href="http://nid.edu" target="_blank"><p><i class="fa fa-globe"></i>&nbsp;www.nid.edu</p></a>
