some shitty hackks for vasu

--- a/index.html
+++ b/index.html
@@ -306,7 +306,9 @@
 		    				<div class="event_ls">
 			    				<span class="time">05:00 PM - 05:45 PM</span>
 			    				<span class="high evt">Vasu Dixit</span>
-			    				<span class="low">Vocalist at Swarathma</span>
+			    				<span class="low line1_hack">Vocalist at Swarathma</span>
+			    				<span class="low line2_hack" style="margin-left: 365px;">and Vasu Dixit Collective</span>
+			    				<span class="low" id="mobile_hack">Vocalist at Swarathma and Vasu Dixit Collective</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">08:00 PM - 08:15 PM</span>
@@ -435,7 +437,7 @@
 		    			<img src="img/Workshop-Mapbox.png" alt="">
 		    			<div class="content">
 			    			<h3>FUTURISTIC MAP DESIGN <span><p>&mdash; Mapbox Team, Bangalore</p></span></h3>
-			    			<p>Create a futuristic map style by using custom icons, type &amp; colors in this hands-on workshop on Mapbox Studio</p>
+			    			<p>Create a futuristic map style by using custom icons, type &amp; colors in this hands-on workshop on Mapbox Studio. (Laptops required)</p>
 		    			</div>
 		    		</div>
 		    		<div class="day21 day">
