--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">06:40 PM - 07:00 PM</span>
-			    				<span class="high tlk">Vilas Nayak</span>
-			    				<span class="low">Speed Painter</span>
+			    				<span class="high tlk">Vijaya Aswani</span>
+			    				<span class="low">Illustrator</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
@@ -283,21 +283,23 @@
 		    				<div class="sub_hd">
 		    					<span class="left">dTalks</span><span class="sep">|</span><span class="right">Twenty-minute TED style talks</span>
 		    				</div>
-		    				<div class="event_ls">
+                                                        <div class="event_ls">
 			    				<span class="time">06:00 PM - 06:20 PM</span>
-			    				<span class="high tlk">Saurabh Srivastava</span>
-			    				<span class="low">Research Scientist, Conduent Labs</span>
-		    				</div>
-		    				<div class="event_ls">
-			    				<span class="time">06:20 PM - 06:40 PM</span>
-			    				<span class="high tlk">Kaveri Gopalakrishnan</span>
-			    				<span class="low">Art Director/Illustrator</span>
-		    				</div>
-		    				<div class="event_ls">
-			    				<span class="time">06:40 PM - 07:00 PM</span>
 			    				<span class="high tlk">Jay Dutta</span>
 			    				<span class="low">UX Designer</span>
 		    				</div>
+		    				
+		    				<div class="event_ls">
+			    				<span class="time">06:20 PM - 06:40 PM</span>
+			    				<span class="high tlk">Sukanya Gopinath</span>
+			    				<span class="low">Visual Merchandiser</span>
+		    				</div>
+                                                <div class="event_ls">
+			    				<span class="time">06:40 PM - 07:00 PM</span>
+			    				<span class="high tlk">Saurabh Srivastava</span>
+			    				<span class="low">Research Scientist, Conduent Labs</span>
+		    				</div>
+		    				
 		    			</div>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
@@ -345,16 +347,17 @@
 			   	<div class="first_row">
 			   		<div class="col col1">
 			   			<div class="speaker">
-							<a href="http://vilasnayak.com/" target="_blank"><img src="img/Final_backgrounds/Vilas-Nayak.png" ></a>
-			   				<h4>Vilas Nayak</h4>
-			   				<span class="des">Speed Painter</span>
-			   				<p>As the music reaches its crescendo, so do his brush strokes. Finalist on India’s Got Talent, and currently the leading speed painter in Asia, Vilas does live art shows regularly in the country and abroad.&nbsp;<a href="http://vilasnayak.com/" target="_blank">Read more</a></p>
+							<a href="https://www.behance.net/vijayaaswani" target="_blank"><img src="img/Final_backgrounds/Vijaya-Aswani.png" ></a>
+			   				<h4>Vijaya Aswani</h4>
+			   				<span class="des">Illustrator</span>
+			   				<p>A graduate in Graphic Design from Symbiosis Institute of Design, she has worked as a Designer at Chumbak.
+She is currently and illustrator at Spreefirit.&nbsp;<a href="https://www.behance.net/vijayaaswani" target="_blank">Read more</a></p>
 			   			</div>
 			   			<div class="speaker">
-			   				<a href="http://kaverigeewhiz.tumblr.com/" target="_blank"><img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.png" ></a>
-			   				<h4>Kaveri Gopalakrishnan</h4>
-			   				<span class="des">Art Director / Illustrator</span>
-			   				<p>A graduate in Animation Film Design from NID, Ahmedabad. She specialises in children’s educational content, preproduction design for animation, art direction for print and publication.&nbsp;<a href="http://kaverigeewhiz.tumblr.com/" target="_blank">Read more</a></p>
+			   				<a href="http://kaverigeewhiz.tumblr.com/" target="_blank"><img src="img/Final_backgrounds/Sukanya-Gopinath.png" ></a>
+			   				<h4>Sukanya Gopinath</h4>
+			   				<span class="des">Visual Merchandiser</span>
+			   				<p>Visual Merchandising head of the department  for Tanishq, Zoya, Mia & FQ.  
 			   			</div>
 			   		</div><!--
 					--><div class="col col2">
